[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Virus.gd" type="Script" id=1]
[ext_resource path="res://Assets/Pictures/varus2.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]

[node name="Virus" type="Sprite"]
position = Vector2( 512, 300 )
scale = Vector2( 0.03, 0.03 )
texture = ExtResource( 2 )
offset = Vector2( 265, 72 )
script = ExtResource( 1 )

[node name="Reload_Speed" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Hitbox" type="Area2D" parent="." groups=["Infectant", "Player"]]
position = Vector2( 266.666, 66.666 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
scale = Vector2( 45, 45 )
shape = SubResource( 1 )

[node name="Damage_Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="timeout" from="Reload_Speed" to="." method="_on_Reload_Speed_timeout"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="timeout" from="Damage_Timer" to="." method="_on_Damage_Timer_timeout"]
